[package]
name = "teaclave-sgx-sdk-docs"
version = "0.1.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", branch = "v2.0.0-preview" }
sgx_trts = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", branch = "v2.0.0-preview" }
sgx_tse  = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", branch = "v2.0.0-preview" }
